crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_transpile_ts_only.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 923
expression: output
---
============================= test.jsx ==
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
export const App = componentQrl((props: Stuff) => {
	return _jsxSorted(Cmp, null, null, <p class="stuff" onClick$={() => console.log("warn")}>Hello Qwik</p>, 1, "0");
}, "App_component_ckEPmXZlub0");

== DIAGNOSTICS ==
[]
