crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_ts_enums_no_transpile.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 924
expression: output
---
============================= test.tsx ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment } from "@qwik.dev/core";
import { component$, useStore } from "@qwik.dev/core";
export enum Thing {
	A,
	B
}
export const App = qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");

============================= test.tsx__u6BtPnK76q4.tsx (ENTRY POINT) ==
export const _u6BtPnK76q4 = () => {
	console.log(Thing.A);
	return (
		<>
			<p class="stuff">Hello Qwik</p>
		</>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    106,
    210
  ]
}
*/
== DIAGNOSTICS ==
[]
