crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_use_client_effect.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Child_component_9GyF01GDKqw = /*#__PURE__*/ qrl(()=>import("./test.tsx_Child_component_9GyF01GDKqw"), "Child_component_9GyF01GDKqw");
//
export const Child = /*#__PURE__*/ componentQrl(q_Child_component_9GyF01GDKqw);

============================= test.tsx_Child_component_useBrowserVisibleTask_0IGFPOyJmQA.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const Child_component_useBrowserVisibleTask_0IGFPOyJmQA = ()=>{
    const state = _captures[0];
    const timer = setInterval(()=>{
        state.count++;
    }, 1e3);
    return ()=>{
        clearInterval(timer);
    };
};

/*
{
  "origin": "test.tsx",
  "name": "Child_component_useBrowserVisibleTask_0IGFPOyJmQA",
  "entry": null,
  "displayName": "test.tsx_Child_component_useBrowserVisibleTask",
  "hash": "0IGFPOyJmQA",
  "canonicalFilename": "test.tsx_Child_component_useBrowserVisibleTask_0IGFPOyJmQA",
  "path": "",
  "extension": "js",
  "parent": "Child_component_9GyF01GDKqw",
  "ctxKind": "function",
  "ctxName": "useBrowserVisibleTask$",
  "captures": true,
  "captureNames": [
    "state"
  ],
  "loc": [
    223,
    343
  ]
}
*/
============================= test.tsx_Child_component_9GyF01GDKqw.js (ENTRY POINT) ==
import { useBrowserVisibleTask$ } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
export const Child_component_9GyF01GDKqw = () => {
	const state = useStore({
		count: 0
	});

	// Double count watch
	useBrowserVisibleTask$(() => {
		const timer = setInterval(() => {
		state.count++;
		}, 1000);
		return () => {
		clearInterval(timer);
		}
	});

	return (
		<div>
		{state.count}
	</div>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "Child_component_9GyF01GDKqw",
  "entry": null,
  "displayName": "test.tsx_Child_component",
  "hash": "9GyF01GDKqw",
  "canonicalFilename": "test.tsx_Child_component_9GyF01GDKqw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    125,
    394
  ]
}
*/
== DIAGNOSTICS ==
[]
