crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_use_optimization.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.jsx ==
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
export const Works = componentQrl((props) => {
	const { countNested } = useStore({ value: { count: 0 } }).value;
	const countNested2 = countNested;
	const { hello } = countNested2;
	const bye = hello.bye;
	const { ciao } = bye.italian;
	return _jsxSorted("div", { ciao }, null, foo, 1, null);
}, "Works_component_t45qL4vNGv0");

== DIAGNOSTICS ==
[]
