crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_use_server_mount.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 929
expression: output
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import mongo from "mongodb";
import redis from "redis";
//
const q_Parent_component_0TaiDayHrlo = /*#__PURE__*/ qrl(()=>import("./test.tsx_Parent_component_0TaiDayHrlo"), "Parent_component_0TaiDayHrlo");
const q_Child_component_9GyF01GDKqw = /*#__PURE__*/ qrl(()=>import("./test.tsx_Child_component_9GyF01GDKqw"), "Child_component_9GyF01GDKqw");
//
export const Parent = /*#__PURE__*/ componentQrl(q_Parent_component_0TaiDayHrlo);
export const Child = /*#__PURE__*/ componentQrl(q_Child_component_9GyF01GDKqw);

============================= test.tsx_Parent_component_0TaiDayHrlo.js ==
import { default as mongo } from "mongodb";
import { useStore } from "@qwik.dev/core";
import { useTask$ } from "@qwik.dev/core";
export const Parent_component_0TaiDayHrlo = () => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useTask$(async () => {
		state.text = await mongo.users();
		redis.set(state.text);
	});

	return (
		<div onClick$={() => console.log('parent')}>
			{state.text}
		</div>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_0TaiDayHrlo",
  "entry": "test.tsx_entry_Parent",
  "displayName": "test.tsx_Parent_component",
  "hash": "0TaiDayHrlo",
  "canonicalFilename": "test.tsx_Parent_component_0TaiDayHrlo",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    157,
    421
  ]
}
*/
============================= test.tsx_Child_component_9GyF01GDKqw.js ==
import { default as mongo } from "mongodb";
import { useStore } from "@qwik.dev/core";
import { useTask$ } from "@qwik.dev/core";
export const Child_component_9GyF01GDKqw = () => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useTask$(async () => {
		state.text = await mongo.users();
	});

	return (
		<div onClick$={() => console.log('child')}>
			{state.text}
		</div>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "Child_component_9GyF01GDKqw",
  "entry": "test.tsx_entry_Child",
  "displayName": "test.tsx_Child_component",
  "hash": "9GyF01GDKqw",
  "canonicalFilename": "test.tsx_Child_component_9GyF01GDKqw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    445,
    683
  ]
}
*/
============================= test.tsx_Parent_component_useTask_gDH1EtUWqBU.js ==
import { _captures } from "@qwik.dev/core";
import { default as mongo } from "mongodb";
export const Parent_component_useTask_gDH1EtUWqBU = async () => {
	const state = _captures[0];
	state.text = await mongo.users();
	redis.set(state.text);
};

/*
{
  "origin": "test.tsx",
  "name": "Parent_component_useTask_gDH1EtUWqBU",
  "entry": "test.tsx_entry_Parent",
  "displayName": "test.tsx_Parent_component_useTask",
  "hash": "gDH1EtUWqBU",
  "canonicalFilename": "test.tsx_Parent_component_useTask_gDH1EtUWqBU",
  "path": "",
  "extension": "js",
  "parent": "Parent_component_0TaiDayHrlo",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "captureNames": [
    "state"
  ],
  "loc": [
    243,
    330
  ]
}
*/
============================= test.tsx_Child_component_useTask_Oh4n7ZeqJkU.js ==
import { _captures } from "@qwik.dev/core";
import { default as mongo } from "mongodb";
export const Child_component_useTask_Oh4n7ZeqJkU = async () => {
	const state = _captures[0];
	state.text = await mongo.users();
};

/*
{
  "origin": "test.tsx",
  "name": "Child_component_useTask_Oh4n7ZeqJkU",
  "entry": "test.tsx_entry_Child",
  "displayName": "test.tsx_Child_component_useTask",
  "hash": "Oh4n7ZeqJkU",
  "canonicalFilename": "test.tsx_Child_component_useTask_Oh4n7ZeqJkU",
  "path": "",
  "extension": "js",
  "parent": "Child_component_9GyF01GDKqw",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "captureNames": [
    "state"
  ],
  "loc": [
    531,
    593
  ]
}
*/
== DIAGNOSTICS ==
[]
