crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__hmr.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrlDEV } from "@qwik.dev/core";
//
const q_TestGetsHmr_component_jBUoou0sxX4 = /*#__PURE__*/ qrlDEV(()=>import("./test.tsx_TestGetsHmr_component_jBUoou0sxX4"), "TestGetsHmr_component_jBUoou0sxX4", {
    file: "/user/qwik/src/test.tsx",
    lo: 105,
    hi: 143,
    displayName: "test.tsx_TestGetsHmr_component"
});
const q_TestNoHmr_componentQrl_Uqk3jGTNmYs = /*#__PURE__*/ qrlDEV(()=>import("./test.tsx_TestNoHmr_componentQrl_Uqk3jGTNmYs"), "TestNoHmr_componentQrl_Uqk3jGTNmYs", {
    file: "/user/qwik/src/test.tsx",
    lo: 188,
    hi: 226,
    displayName: "test.tsx_TestNoHmr_componentQrl"
});
//
export const TestGetsHmr = /*#__PURE__*/ componentQrl(q_TestGetsHmr_component_jBUoou0sxX4);
export const TestNoHmr = /*#__PURE__*/ componentQrl(q_TestNoHmr_componentQrl_Uqk3jGTNmYs);

============================= test.tsx_TestGetsHmr_component_jBUoou0sxX4.js (ENTRY POINT) ==
import { _useHmr } from "@qwik.dev/core";
export const TestGetsHmr_component_jBUoou0sxX4 = () => { 
_useHmr("/user/qwik/src/test.tsx");

			return <div>Test</div>;
		};
/*
{
  "origin": "test.tsx",
  "name": "TestGetsHmr_component_jBUoou0sxX4",
  "entry": null,
  "displayName": "test.tsx_TestGetsHmr_component",
  "hash": "jBUoou0sxX4",
  "canonicalFilename": "test.tsx_TestGetsHmr_component_jBUoou0sxX4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    104,
    142
  ]
}
*/
============================= test.tsx_TestNoHmr_componentQrl_Uqk3jGTNmYs.js (ENTRY POINT) ==
export const TestNoHmr_componentQrl_Uqk3jGTNmYs = () => {
			return <div>Test</div>;
		};
/*
{
  "origin": "test.tsx",
  "name": "TestNoHmr_componentQrl_Uqk3jGTNmYs",
  "entry": null,
  "displayName": "test.tsx_TestNoHmr_componentQrl",
  "hash": "Uqk3jGTNmYs",
  "canonicalFilename": "test.tsx_TestNoHmr_componentQrl_Uqk3jGTNmYs",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    187,
    225
  ]
}
*/
== DIAGNOSTICS ==
[]
